--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@axelar-network/axelarjs-sdk": "file:../axelarjs-sdk",
+    "@axelar-network/axelarjs-sdk": "^0.6.0-alpha.2",
     "@cosmjs/stargate": "^0.28.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
