--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "0.9.0",
-    "@axelar-network/axelarjs-types": "0.0.3",
+    "@axelar-network/axelarjs-types": "^0.33.0-alpha.1",
     "@cosmjs/stargate": "^0.28.4",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/common": "^8.0.0",
