--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@axelar-network/axelarjs-sdk": "0.9.0",
-    "@axelar-network/axelarjs-types": "^0.33.0-alpha.1",
+    "@axelar-network/axelarjs-sdk": "^0.12.8",
+    "@axelar-network/axelarjs-types": "^0.33.0",
     "@cosmjs/stargate": "^0.28.4",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/common": "^8.0.0",
