--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "NODE_OPTIONS=--no-deprecation jest --config ./test/jest-e2e.json",
+    "test:e2e:cov": "NODE_OPTIONS=--no-deprecation jest --config ./test/jest-e2e.json --coverage --coverageReporters=text --coverageReporters=lcov"
   },
   "dependencies": {
-    "@axelar-network/axelarjs-sdk": "^0.12.8",
-    "@axelar-network/axelarjs-types": "^0.33.0",
-    "@cosmjs/stargate": "^0.28.4",
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.1.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@axelar-network/axelarjs-sdk": "^0.18.0",
+    "@axelar-network/axelarjs-types": "^1.3.0",
+    "@cosmjs/encoding": "^0.38.1",
+    "@cosmjs/stargate": "^0.38.1",
+    "@nestjs/cli": "^11.0.16",
+    "@nestjs/common": "^11.1.12",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.12",
+    "@nestjs/platform-express": "^11.1.12",
     "class-validator": "^0.13.2",
     "ethers": "^5.6.8",
     "helmet": "^5.1.0",
@@ -38,8 +40,8 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/schematics": "^11.0.9",
+    "@nestjs/testing": "^11.1.12",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
@@ -57,7 +59,9 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^5.9.3",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -75,5 +79,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "@scure/base": "^1.1.1"
   }
 }
